# BugPet

./: .gitignore  LOG.md  README.md  SPEC.md  package-lock.json  package.json  panel.html  vite.config.ts  优化.md
.trae/rules/: design-bible.md
src/: App.vue  panel.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/Panel/: ControlPanel.vue  Heatmap.vue
src/components/Pet/: PetSprite.vue  SpeechBubble.vue
src/composables/: useActivity.ts  useCodingStats.ts  useGrowth.ts  useSpeech.ts
src/pet/: index.ts  markov.ts
src/pet/corpus/: chaotic.ts  desktop.ts  focused.ts  idle.ts  watching.ts
