[package]
name = "bugpet"
version = "0.1.0"
description = "A desktop pet for coding focus and growth"
authors = ["you"]
edition = "2021"

[lib]
name = "bugpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
image = "0.25"
windows = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
] }
